	- fix MED4 instrument numbering
	- fix MED effect FFF (turn note off)
	- fix MED synth finetune effect
	Fix bugs caught in the OpenMPT test cases:
	- add XM and IT envelope loop and sustain point quirk
	- fix Amiga limits for notes with finetune
	- fix XM invalid offset handling
	- fix XM note release reset on new volume
	- fix XM pattern loader to honor header size
	- fix XM fine pitch slide effect memory
	- fix XM finetune effect
	- fix IT portamento if offset effect is used
	- fix IT NNA on invalid sample mapping
	- fix IT filter envelope index reset
	- fix IT envelope carry on note cut events
	- fix IT envelope reset on new instrument
	- fix IT instrument change on portamento in compatible GXX mode
	- fix IT filter cutoff reset
	Other changes:
	- add API call to load a module from a file handle
	- add API call to set default pan separation value
	- add OpenMPT test cases to regression test suite
	- refactor memory I/O calls
	- read OctaMED annotation and song info text
	- fix segfault in mixer caused by sample position overflow
	- fix MED synth pitch slide reset on new note
	- fix OctaMED SS default pitch transpose (reported by Karl Churchill)
	- fix OctaMED instrument name loading
	- fix XM, S3M, IT and MED offset effect handling
	- fix S3M shared effect parameter memory
	- fix S3M set BPM effect with values < 32 (reported by Kyu S.)
	- fix incorrect Noisetracker effect filtering (reported by Kyu S.)
	- fix finetune effect
	
4.2.8 (20140714):
	Fix bugs reported by Sami Jumppanen:
	- fix OctaMED decimal volume decoding
	- fix MED4 sampled instrument octave range
	- fix mishandling of MED4 effect FFD
	- fix MED synth waveform command CHD
	Other changes:
	- fix sequence number reset on player start
	- fix stray notes in XM (reported by Andreas Argirakis)
	- limit note number to avoid crash (reported by Bastian Pflieger)
	- disable recursive file decompression

4.2.7 (20140412):
	- add support for XM with ADPCM samples (reported by mk.bikash)